[package]
name = "aipatch"
version = "0.1.0"
edition = "2021"

[[bin]]
bench = false
path = "src/main.rs"
name = "aip"

[dependencies]
anyhow = "1.0.95"
async-openai = { version = "0.27.2", features = ["rustls", "rustls-webpki-roots"] }
clap = { version = "4.5.26", features = ["derive"] }
dialoguer = "0.11.0"
difference = "2.0.0"
reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
